<resources>
    <string name="app_name">Expense App</string>
    <string name="if_register">Если вы уже зарегистрированы</string>
    <string name="login">Войти</string>
    <string name="if_not_register">Если у вас еще нет аккаунта</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login_text">Логин</string>
    <string name="password">Пароль</string>
    <string name="name">Ваше имя</string>
    <string name="lastname">Ваша фамилия</string>
    <string name="not_correct_password">Неверный пароль</string>
    <string name="password_again">Подтвердить пароль</string>
    <string name="not_match">Пароли не совпадают</string>
    <string name="already_exists">Пользователь с таким логином уже существует</string>
    <string name="add_ex">Добавить расход</string>
    <string name="all_ex">Все расходы</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="exit">Выйти</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="enter_ex_name">Введите цель затрат</string>
    <string name="change_ph">Выбрать новое фото</string>
    <string name="save_ph">Сохранить фото</string>
    <string name="save_changes">Сохранить данные</string>
    <string name="user_name">Введите имя</string>
    <string name="user_lastname">Введите фамилию</string>
    <string name="calendar_open">Календарь</string>


</resources>