<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

  <ImageView
      android:id="@+id/image"
      android:layout_width="0dp"
      android:layout_height="141dp"
      android:layout_marginStart="100dp"
      android:layout_marginEnd="100dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.072" />

  <TextView
      android:id="@+id/name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="100dp"
      android:layout_marginTop="60dp"
      android:layout_marginEnd="100dp"
      android:gravity="center"
      android:textSize="17sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/image" />

  <Button
      android:id="@+id/change_photo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:text="@string/change_ph"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name"
      app:layout_constraintVertical_bias="0.103" />


  <Button
      android:id="@+id/save_photo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:text="@string/save_ph"
      android:backgroundTint="@color/teal_200"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name"
      app:layout_constraintVertical_bias="0.264" />

  <EditText
      android:id="@+id/u_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="72dp"
      android:layout_marginEnd="30dp"
      android:hint="@string/user_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/save_photo" />

  <EditText
      android:id="@+id/u_lastname"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:hint="@string/user_lastname"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/u_name"
      app:layout_constraintVertical_bias="0.146" />

  <Button
      android:id="@+id/save"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:text="@string/save_changes"
      android:backgroundTint="@color/teal_200"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/u_lastname"
      app:layout_constraintVertical_bias="0.275" />
</androidx.constraintlayout.widget.ConstraintLayout>